--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10692,16 +10692,35 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   border: none;
   box-shadow: none;
 }
-.node-form #edit-field-image .image-widget-data {
+.node-form #edit-field-image .image-widget-data,
+.node-form #edit-field-private-image .image-widget-data {
   display: block;
   float: none;
   clear: both;
 }
-.node-form #edit-field-image .image-widget-data .form-file {
+.node-form #edit-field-image .image-widget-data .form-file,
+.node-form #edit-field-private-image .image-widget-data .form-file {
   width: 40%;
   display: inline-block;
 }
-.node-form #edit-field-image .image-widget-data button {
+.node-form #edit-field-image .image-widget-data input[type="file"],
+.node-form #edit-field-private-image .image-widget-data input[type="file"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.node-form #edit-field-image .image-widget-data input[type="file"]:before,
+.node-form #edit-field-private-image .image-widget-data input[type="file"]:before {
+  content: "Select file";
+  background-color: #10b2e4;
+  color: white;
+  padding: 3px 43px;
+  position: absolute;
+  height: 25px;
+  cursor: pointer;
+}
+.node-form #edit-field-image .image-widget-data button,
+.node-form #edit-field-private-image .image-widget-data button {
   padding: 7px 15px;
   vertical-align: top;
   border: none;
@@ -10709,7 +10728,8 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   background-color: #786586;
   color: white;
 }
-.node-form #edit-field-image .image-widget-data textarea {
+.node-form #edit-field-image .image-widget-data textarea,
+.node-form #edit-field-private-image .image-widget-data textarea {
   width: 40%;
   height: 36px;
 }
@@ -10775,6 +10795,20 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 .node-form #edit-field-resource-fc .panel .panel-body #edit-field-resource-fc-und-0-field-language {
   width: 40%;
 }
+.node-form #edit-field-resource-fc .panel .panel-body .form-managed-file input[type="file"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.node-form #edit-field-resource-fc .panel .panel-body .form-managed-file input[type="file"]:before {
+  content: "Select file";
+  background-color: #10b2e4;
+  color: white;
+  padding: 3px 43px;
+  position: absolute;
+  height: 25px;
+  cursor: pointer;
+}
 .node-form #edit-field-resource-fc .panel .panel-body .form-managed-file .form-submit {
   background-color: #10b2e4;
   color: white;
@@ -10829,6 +10863,60 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 }
 .page-node-add-promotional-material #edit-field-oira {
   margin-top: 10px;
+}
+.partner-edit-form h2 {
+  color: #786586;
+  font-family: "Oswald";
+  padding-top: 15px;
+  padding-bottom: 20px;
+  font-size: 2em;
+}
+.partner-edit-form .group-footer {
+  border-bottom: 2px solid #786586;
+}
+.partner-edit-form input,
+.partner-edit-form .chosen-container-single {
+  background: inherit;
+  background-color: #dfd8e4 !important;
+  border: 1px solid #786586 !important;
+  max-width: 100% !important;
+  width: 100% !important;
+  opacity: 1 !important;
+}
+.partner-edit-form input a,
+.partner-edit-form .chosen-container-single a {
+  background: inherit !important;
+}
+.partner-edit-form textarea {
+  background-color: white !important;
+}
+.partner-edit-form .field-multiple-drag {
+  display: none;
+}
+.partner-edit-form table.sticky-header {
+  display: none;
+}
+.partner-edit-form table#field-social-profile-values .draggable,
+.partner-edit-form table#field-collaborator-values .draggable {
+  background: inherit;
+}
+.partner-edit-form table#field-social-profile-values .draggable td,
+.partner-edit-form table#field-collaborator-values .draggable td {
+  padding: 0px;
+}
+.partner-edit-form table#field-social-profile-values .draggable .form-group,
+.partner-edit-form table#field-collaborator-values .draggable .form-group {
+  margin-bottom: 5px;
+}
+.partner-edit-form table#field-collaborator-values .oira-logo-container {
+  width: 25%;
+  min-width: 200px;
+  display: inline-block;
+  vertical-align: top;
+}
+.partner-edit-form table#field-collaborator-values .field-name-field-collaborator-name {
+  width: 75%;
+  display: inline-block;
 }
 .page-node-my-content input,
 .page-node-my-content textarea,
@@ -10896,6 +10984,47 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   background-color: white;
   margin-top: 10px;
   padding-top: 15px;
+}
+.page-collaboration-area .page-promotional-materials-search .panel-page-introduction-text h2 {
+  color: #786586;
+  border-bottom: 2px solid #786586;
+  padding-bottom: 15px;
+  margin-bottom: 25px;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration {
+  padding-bottom: 25px;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul li {
+  display: inline-block;
+  width: 33%;
+  text-align: center;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-image a {
+  width: 150px;
+  margin: 0 auto;
+  height: 150px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  display: block;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-image a img {
+  display: none;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-title {
+  font-size: 1.2em;
+  color: #786586;
+  font-style: italic;
+  max-width: 120px;
+  margin: 0 auto;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul .menu-mlid-2796 .introduction-image a {
+  background: url('../images/icons/collaboration-osha.png') #786586 no-repeat center !important;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul .menu-mlid-2797 .introduction-image a {
+  background: url('../images/icons/collaboration-partners.png') #786586 no-repeat center !important;
+}
+.page-collaboration-area .page-promotional-materials-search .menu-name-menu-collaboration ul .menu-mlid-2798 .introduction-image a {
+  background: url('../images/icons/collaboration-upload.png') #786586 no-repeat center !important;
 }
 /*FOOTER
 ********************************************/
