css changes pz- tablet resolution 1rst commit

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1763,6 +1763,87 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 }
 
+/*Private zone
+************************/
+
+.node-form{
+	input,
+	select,
+	textarea,
+	label,
+	#edit-field-website-und-0-url{
+		width: 100% !important;
+		max-width: 100%;
+	}
+	textarea{
+		max-height: 90px;
+	}
+	.col-md-12,
+	.col-md-12,
+	.col-sm-12,
+	.col-sm-6{
+		padding-left: 0px;
+		padding-right: 0px;
+	}
+	.form-group {
+	    margin-bottom: 10px;
+	}
+	.form-type-date-select .form-type-select[class*=hour] {
+	    margin-left: 0em;
+	}
+	#edit_field_co_author_und_chosen, 
+	#edit_field_sector_und_chosen {
+    	width: 100% !important;
+    	min-width: 100px;
+	}
+
+
+	//buttons
+	button#edit-save-preview,
+	button#edit-submit{
+		margin-top: 15px;
+		width: 100%;
+		overflow: hidden;
+	}
+	button#edit-send-for-approval{
+		font-size: 1em;
+		margin-top: 15px;
+		width: 100%;
+    	word-wrap: break-word;
+    	overflow: hidden;
+	}
+
+	//file
+	#edit-field-image,
+	#edit-field-private-image{
+		.image-widget-data{
+			input[type="file"]{
+				width: 67% !important;
+			}
+		}
+	}
+
+
+
+}
+
+.partner-edit-form h2{
+	padding-top: 0px;
+}
+
+.page-node-my-content{
+	.view-id-partner_content{
+		table{
+			td{
+				padding-left: 2px !important;
+				padding-right: 2px !important;
+			}
+		}
+	}
+}
+
+/*End private zone*/
+
 /*general search styles
 ***************************************************/
 .page-search-site{
