--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4091,19 +4091,23 @@ div[id ^= "mini-panel-partner_in_"], {
 
 //menu
 .menu-name-menu-private-zone{
-	background-color: @color-primary-dark; 
+	background-color: @color-primary-dark;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+    overflow: hidden;
 	ul.menu{
-		padding-top: 15px;
-		padding-bottom: 15px;
+		display: table;
+		text-align: center;
 		> li{
-			float: left;
 			width: 150px;
 			height: 150px;
 			text-align: center;
 			border-radius: 50%;
 			padding: 5px;
-    		padding-top: 10px;
+    		padding-top: 20px;
     		cursor: pointer;
+    		display: table-cell;
     		&:hover{
     			background-color: rgba(255, 255, 255, 0.7);
     			img{
@@ -4119,6 +4123,7 @@ div[id ^= "mini-panel-partner_in_"], {
 			.introduction-image{
 				img{
 					max-width: 40%;
+					margin-bottom: 10px;
 				}
 			}
 			.introduction-title{
@@ -4201,8 +4206,11 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 	}
 	//imagen
-	#edit-field-image, #edit-field-private-image{
-		.image-widget-data{
+	#edit-field-image, 
+	#edit-field-private-image, 
+	#edit-field-private-file{
+		.image-widget-data,
+		.file-widget{
 			display: block;
 			float: none;
 			clear: both;
@@ -4396,6 +4404,18 @@ div[id ^= "mini-panel-partner_in_"], {
 	.group-footer{
 		border-bottom: 2px solid @color-primary-dark;
 	}
+	label{
+		&:after{
+			content: "";
+		    background: url(../images/icons/128.png) top no-repeat;
+		    display: inline-block;
+		    background-size: cover;
+		    width: 20px;
+		    height: 20px;
+		    vertical-align: text-bottom;
+		    margin-left: 7px;
+		}
+	}
 	input, .chosen-container-single{
 		background: inherit;
 		background-color: @color-primary !important;
@@ -4418,6 +4438,9 @@ div[id ^= "mini-panel-partner_in_"], {
 	}
 	table#field-social-profile-values, 
 	table#field-collaborator-values{
+		thead{
+			display: none;
+		}
 		.draggable{
 			background: inherit;
 			td{
@@ -4431,7 +4454,6 @@ div[id ^= "mini-panel-partner_in_"], {
 	table#field-collaborator-values{
 		.oira-logo-container{
 			width: 25%;
-			min-width: 200px;
 			display: inline-block;
 			vertical-align: top;
 		}
@@ -4569,6 +4591,281 @@ div[id ^= "mini-panel-partner_in_"], {
 					.introduction-image{
 						a{
 							background: url('../images/icons/collaboration-upload.png') @color-primary-dark no-repeat center !important;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+//list
+.oira-search-form-container{
+	background: url('../images/background-two-colors.png') repeat-y 50%;
+	padding-bottom: 0px;
+	#oira-strategic-documentation-eu-osha-form,
+	#oira-strategic-documentation-partners-form{
+		div:first-child{
+		    .form-group{
+		    	margin-bottom: 0px;
+		    }
+		    #edit-left-column{
+				background-color: @color-primary-dark;
+				color: @color-white;
+				padding-right: 30px;
+				padding-top: 30px;
+				padding-bottom: 30px;
+				position: relative;
+				.form-type-textfield{
+					float: left;
+					margin-bottom: 15px;
+					input{
+						border: none;
+						border-radius: 0px;
+						outline: none;
+						height: auto;
+						padding-right: 35px;
+					}
+
+				}
+				#edit-submit{
+					position: absolute;
+					right: 0;
+					margin-right: 30px;
+					color: @color-text-purple-darker;
+				    border: none;
+				    border-radius: 0px;
+				    outline: none;
+				    width: 35px;
+				    line-height: 19px;
+					font-size: 1.2em;
+					padding-left: 7px;
+					overflow: hidden;
+					background-color: rgba(0,0,0,0);
+					&:before{
+						content: "\e003";
+						font-family: "Glyphicons Halflings";
+						margin-right: 30px;
+					}
+				}
+				a.active{
+					display: block;
+					color: @color-white;
+					margin-bottom: 10px;
+					font-style: italic;
+					span{
+						&:before{
+							color: @color-text-purple-darker;
+						    padding: 1px;
+						    font-size: 0.7em;
+						    margin-right: 10px;
+						    background-color: @color-white;
+						    display: block;
+						    width: 13px;
+						    height: 13px;
+						}
+					}
+				}
+				#edit-field-country, #edit-field-languagevalue, #edit-field-sector{
+					label{
+						&:after{
+							content: none;
+						}
+					}
+				}
+				.form-type-checkboxes{
+					border-top: 2px solid @color-white;
+					padding-top: 10px;
+					clear: both;
+					margin-top: 15px;
+
+					input.form-checkbox{
+						display: none;
+					}
+					label{
+						padding-left: 0px;
+						margin-bottom: 0px;
+						&:first-child{
+							font-family: @font-family-base-2;
+							font-size: @font-size1-2;
+							font-weight: normal;
+							display: block;
+							margin-bottom: 10px;
+							cursor: pointer;
+						}
+						&:after{
+							content: "\e250";
+							font-family: "Glyphicons Halflings";
+							margin-left: 10px;
+						}
+					}
+					.area-shown{
+						&:after{
+							content: "\e252";
+							font-family: "Glyphicons Halflings";
+							margin-left: 10px;
+						}
+					}
+
+				}
+				.form-item-field-sector{
+					border-bottom: 2px solid @color-white;
+				}
+			}
+
+			#edit-content{
+				background-color: @color-primary;
+				padding-bottom: 90px;
+				padding-left: 30px;
+				padding-top: 30px;
+				min-height: 338px;
+				border-left: 5px solid @color-white;
+				#edit-sort-fieldset{
+					border: none;
+					border-radius: 0px;
+					background-color: rgba(0,0,0,0);
+					box-shadow: none;
+					border-top: 2px solid @color-text-purple-darker;
+					border-bottom: 2px solid @color-text-purple-darker;
+					margin-bottom: 30px;
+					.panel-body{
+						padding-left: 0px;
+						padding-right: 0px;
+					}
+					.sort-container{
+						min-width: 210px;
+						padding-left: 0px;
+						label{
+							font-weight: 100;
+							font-size: @font-size0-9;
+							&:after{
+								content: ": ";
+							}
+						}
+						#edit-sort{
+							font-size: @font-size0-9;
+							display: inline-block;
+						    width: auto;
+						    padding: 0;
+						    border: none;
+						    padding-bottom: 1px;
+						    font-weight: bold;
+						    height: initial;
+						    background-color: rgba(0,0,0,0);
+						}
+					}
+					.count-container{
+						font-size: @font-size0-9;
+					}
+				}
+				.search-page-results-wrapper{
+					background-color: @color-white;
+					padding: 30px;
+					.node-practical-tool{
+						border-top: 2px solid @color-primary-dark;
+						padding:30px 0px;
+						margin-right: 0px;
+						margin-left: 0px;
+						.col-sm-3{
+							padding-left: 0px;
+						}
+						.field-name-title-field{
+							font-size: @font-size1-4;
+						}
+						.group-center.col-md-12{
+							clear: both;
+						}
+						.field-name-tools-see-more{
+							margin-left: 207px;
+							a.more-link{
+								text-align: left;
+								margin-top: 15px;
+							}
+							a.show-less{
+								text-align: right !important;
+								width: 20px;
+								height: 12px;
+							    float: right;
+							    overflow: hidden;
+							    font-style: normal;
+								&:before{
+									content: "\e253";
+									font-family: "Glyphicons Halflings";
+									font-size: 1.2em;
+									line-height: 0;
+								}
+							}
+						}
+						.field-name-field-tool-link{
+							position: absolute;
+							right: 15px;
+							margin-top: 15px;
+							a{
+								color: @color-text-grey;
+							    font-weight: bold;
+							    margin-top: 0px;
+							    display: block;
+							    //margin-bottom: 15px;
+								span.glyphicon-new-window{
+									color: @color-see-more;
+									margin-left: 10px;
+								}
+							}
+						}
+						//partners inside oira tools
+						.field-name-related-partners{
+							margin-top: 50px;
+							.node-partner{
+								background-color: @color-primary-dark;
+								padding: 15px;
+								color: @color-white;
+								
+								h4{
+									min-height: 45px;
+									a{
+										font-size: 0.9em;
+										color: @color-white;
+										margin-top: 0px;
+									}
+								}
+								.more-link{
+									color: @color-white;
+									text-align: left;
+								}
+							}
+						}
+						.related-partners-1 > div{
+							margin-left: 222px;
+						}
+						.related-partners-2{
+							.node-partner{
+									  margin-left: 0px;
+								}
+						}
+						.related-partners-2 > div{
+							display: table;
+							border-collapse: collapse;
+							.group-left {
+								a{
+									 img{
+									  	width: auto;
+									  	height: 100px;
+									}
+								}
+							}
+							& > .even, & > .odd{
+								&:first-child{
+									display: table-cell;
+								}
+							}
+							& > .even:first-child{
+								//border-right: 10px solid white;
+								width: 50%;
+								.node-partner{
+									  margin-right: 10px;
+									  margin-left: 0px;
+								}
+							}
 						}
 					}
 				}
