--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1765,6 +1765,58 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 
 /*Private zone
 ************************/
+//menu
+.menu-name-menu-private-zone{
+	background-color: @color-primary-dark;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+	ul.menu{
+		display: inherit;
+		text-align: center;
+		padding-left: 0px;
+		padding-right: 0px;
+		width: 100%;
+		position: initial !important;
+		.slick-track{
+			li.active-trail{
+				background-color: rgba(255, 255, 255, 0.3);
+			}
+			> li{
+				width: 100px !important;
+				height: 100px;
+				text-align: center;
+				border-radius: 50%;
+				padding: 5px;
+	    		padding-top: 5px;
+	    		cursor: pointer;
+	    		display: table-cell;
+    		}
+    		.introduction-image{
+				img{
+					max-width: 40%;
+					margin-bottom: 10px;
+					margin: 0 auto;
+					text-align: center;
+				}
+			}
+			.introduction-title{
+				a{
+					color: white;
+					font-style: italic;
+					text-decoration: none;
+					font-size: 1em;
+				}
+			}
+			ul.submenu-items{
+				list-style: none;
+			}
+    	}
+	}
+}
+//end menu
 
 .node-form{
 	input,
