--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -1159,6 +1159,100 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 /*Private zone
 *****************************************************/
 
+//menu
+.menu-name-menu-private-zone{
+	background-color: @color-primary-dark;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+	ul.menu{
+		display: inherit;
+		text-align: center;
+		padding-left: 0px;
+		padding-right: 0px;
+		width: 750px;
+		position: relative !important;
+		.slick-list{
+			padding: 0px !important;
+		}
+		.slick-track{
+				li.active-trail{
+					background-color: rgba(255, 255, 255, 0.3);
+				}
+				> li{
+				width: 150px !important;
+				height: 150px;
+				text-align: center;
+				border-radius: 50%;
+				padding: 5px;
+	    		padding-top: 20px;
+	    		cursor: pointer;
+	    		display: table-cell;
+	    		&:hover{
+	    			background-color: rgba(255, 255, 255, 0.7);
+	    			img{
+	    				-webkit-filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
+	    				filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
+	    			}
+	    			.introduction-title{
+		    			a{
+		    				color: @color-primary-dark;
+		    			}
+	    			}
+	    		}
+				.introduction-image{
+					img{
+						max-width: 40%;
+						margin-bottom: 10px;
+						margin: 0 auto;
+						text-align: center;
+					}
+				}
+				.introduction-title{
+					a{
+						color: white;
+						font-style: italic;
+						text-decoration: none;
+					}
+				}
+				ul.submenu-items{
+					list-style: none;
+				}
+			}
+		}
+		.slick-prev{
+			background: url("../images/icons/menu-arrow-left.png") @color-primary-dark center no-repeat;
+			height: 100%;
+		    max-width: 35px;
+		    overflow: hidden;
+		    padding-left: 35px;
+		    border: none;
+		    position: absolute;
+		    left: 0;
+		    top: 0;
+		    background-color: @color-primary-dark;
+		    outline: none;
+		    z-index: 2;
+		}
+		.slick-next{
+			background: url("../images/icons/menu-arrow-right.png") @color-primary-dark center no-repeat;
+			height: 100%;
+		    max-width: 35px;
+		    overflow: hidden;
+		    padding-left: 35px;
+		    border: none;
+		    position: absolute;
+		    right: 0;
+		    top: 0;
+		    background-color: @color-primary-dark;
+		    outline: none;
+		    z-index: 2;
+		}
+	}
+}
+
 .node-form{
 	#edit-field-image, 
 	#edit-field-private-image, 
