css changes pz - collaboration area 2nd commit

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -14861,6 +14861,48 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
     padding-left: 2px !important;
     padding-right: 2px !important;
   }
+  .page-collaboration-area.page-strategic-documentation-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last {
+    background-color: inherit;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .panel-page-introduction-text h2 {
+    color: #786586;
+    border-bottom: 2px solid #786586;
+    padding-bottom: 15px;
+    margin-bottom: 25px;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration {
+    padding-bottom: 25px;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration ul li {
+    display: block;
+    width: 100%;
+    text-align: center;
+    background-color: #786586;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-image {
+    display: none;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-image a {
+    width: 150px;
+    margin: 0 auto;
+    height: 150px;
+    margin-bottom: 10px;
+    border-radius: 50%;
+    display: block;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-image a img {
+    display: none;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-title {
+    max-width: inherit;
+    padding: 15px 0px;
+    margin-bottom: 10px;
+  }
+  .page-collaboration-area.page-strategic-documentation-search .page-promotional-materials-search .menu-name-menu-collaboration ul li .introduction-title a {
+    font-size: 1em;
+    color: white;
+    font-style: italic;
+  }
   /*End private zone*/
   /*general search styles
 ***************************************************/
