--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1894,6 +1894,58 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 }
 
+//collaboration page
+.page-collaboration-area.page-strategic-documentation-search{
+	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
+		background-color: inherit;
+	}
+	.page-promotional-materials-search{
+		.panel-page-introduction-text{
+			h2{
+				color: @color-text-purple-darker;
+				border-bottom: 2px solid @color-primary-dark;
+				padding-bottom: 15px;
+				margin-bottom: 25px;
+			}
+		}
+		.menu-name-menu-collaboration{
+			padding-bottom: 25px;
+			ul{
+				li{
+					display: block;
+					width: 100%;
+					text-align: center;
+					background-color: @color-text-purple-darker;
+					.introduction-image{
+						display: none;
+						a{
+							width: 150px;
+						    margin: 0 auto;
+						    height: 150px;
+						    margin-bottom: 10px;
+						    border-radius: 50%;
+						    display: block;
+						    img{
+						    	display: none;
+						    }
+						}
+					}
+					.introduction-title{
+						max-width: inherit;
+						padding: 15px 0px;
+						margin-bottom: 10px;
+						a{
+							font-size: @font-size1;
+							color: white;
+							font-style: italic;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
 /*End private zone*/
 
 /*general search styles
