--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10598,36 +10598,60 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   text-align: center;
 }
 .menu-name-menu-private-zone ul.menu > li {
-  width: 150px;
-  height: 150px;
   text-align: center;
-  border-radius: 50%;
-  padding: 5px;
-  padding-top: 20px;
-  cursor: pointer;
   display: table-cell;
 }
-.menu-name-menu-private-zone ul.menu > li:hover {
+.menu-name-menu-private-zone ul.menu > li > div {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  padding: 0px;
+  padding-top: 10px;
+  margin-bottom: 12px;
+}
+.menu-name-menu-private-zone ul.menu > li > div:hover {
   background-color: rgba(255, 255, 255, 0.7);
 }
-.menu-name-menu-private-zone ul.menu > li:hover img {
+.menu-name-menu-private-zone ul.menu > li > div:hover img {
   -webkit-filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
   filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
 }
-.menu-name-menu-private-zone ul.menu > li:hover .introduction-title a {
+.menu-name-menu-private-zone ul.menu > li > div:hover .introduction-title a {
   color: #786586;
 }
-.menu-name-menu-private-zone ul.menu > li .introduction-image img {
+.menu-name-menu-private-zone ul.menu > li > div .introduction-image img {
   max-width: 40%;
-  margin-bottom: 10px;
+  cursor: pointer;
 }
-.menu-name-menu-private-zone ul.menu > li .introduction-title a {
+.menu-name-menu-private-zone ul.menu > li > div .introduction-title a {
   color: white;
   font-style: italic;
   text-decoration: none;
+  cursor: pointer;
 }
 .menu-name-menu-private-zone ul.menu > li ul.submenu-items {
   list-style: none;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.menu-name-menu-private-zone ul.menu > li ul.submenu-items a {
+  background-color: white;
+  vertical-align: middle;
+  display: table-cell;
+  height: 40px;
+  width: 140px;
+  border-radius: 5px;
+  font-style: italic;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-size: 0.9em;
+  line-height: 16px;
+  text-decoration: none;
+  opacity: 0.8;
+}
+.menu-name-menu-private-zone ul.menu > li ul.submenu-items a:hover {
+  opacity: 1;
+  color: #786586;
 }
 .node-form > div {
   background-color: #dfd8e4;
@@ -12606,16 +12630,10 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   /*Private zone
 *****************************************************/
   .menu-name-menu-private-zone {
-    background-color: #786586;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    width: 100%;
-    overflow: hidden;
     position: relative;
   }
   .menu-name-menu-private-zone ul.menu {
     display: inherit;
-    text-align: center;
     padding-left: 0px;
     padding-right: 0px;
     width: 750px;
@@ -12628,38 +12646,61 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
     background-color: rgba(255, 255, 255, 0.3);
   }
   .menu-name-menu-private-zone ul.menu .slick-track > li {
-    width: 150px !important;
-    height: 150px;
     text-align: center;
-    border-radius: 50%;
-    padding: 5px;
-    padding-top: 20px;
-    cursor: pointer;
     display: table-cell;
   }
-  .menu-name-menu-private-zone ul.menu .slick-track > li:hover {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    padding: 0px;
+    padding-top: 10px;
+    margin-bottom: 12px;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div:hover {
     background-color: rgba(255, 255, 255, 0.7);
   }
-  .menu-name-menu-private-zone ul.menu .slick-track > li:hover img {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div:hover img {
     -webkit-filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
     filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
   }
-  .menu-name-menu-private-zone ul.menu .slick-track > li:hover .introduction-title a {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div:hover .introduction-title a {
     color: #786586;
   }
-  .menu-name-menu-private-zone ul.menu .slick-track > li .introduction-image img {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div .introduction-image img {
     max-width: 40%;
     margin-bottom: 10px;
     margin: 0 auto;
     text-align: center;
+    cursor: pointer;
   }
-  .menu-name-menu-private-zone ul.menu .slick-track > li .introduction-title a {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div .introduction-title a {
     color: white;
     font-style: italic;
     text-decoration: none;
+    cursor: pointer;
   }
   .menu-name-menu-private-zone ul.menu .slick-track > li ul.submenu-items {
     list-style: none;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li ul.submenu-items a {
+    background-color: white;
+    vertical-align: middle;
+    display: table-cell;
+    height: 40px;
+    width: 140px;
+    border-radius: 5px;
+    font-style: italic;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 0.9em;
+    line-height: 16px;
+    text-decoration: none;
+    opacity: 0.8;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li ul.submenu-items a:hover {
+    opacity: 1;
+    color: #786586;
   }
   .menu-name-menu-private-zone ul.menu .slick-prev {
     background: url("../images/icons/menu-arrow-left.png") #786586 center no-repeat;
@@ -14765,48 +14806,68 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   /*Private zone
 ************************/
   .menu-name-menu-private-zone {
-    background-color: #786586;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    width: 100%;
-    overflow: hidden;
     position: relative;
+    padding-left: 43px;
   }
   .menu-name-menu-private-zone ul.menu {
-    display: inherit;
-    text-align: center;
-    padding-left: 0px;
-    padding-right: 0px;
-    width: 100%;
+    width: 600px;
     position: initial !important;
   }
   .menu-name-menu-private-zone ul.menu .slick-track li.active-trail {
     background-color: rgba(255, 255, 255, 0.3);
   }
-  .menu-name-menu-private-zone ul.menu .slick-track > li {
-    width: 100px !important;
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div {
+    width: 93% !important;
     height: 100px;
-    text-align: center;
     border-radius: 50%;
-    padding: 5px;
+    padding: 0px;
     padding-top: 5px;
-    cursor: pointer;
-    display: table-cell;
+    margin-bottom: 20px;
   }
-  .menu-name-menu-private-zone ul.menu .slick-track .introduction-image img {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div:hover {
+    background-color: inherit;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div:hover img {
+    -webkit-filter: inherit;
+    filter: inherit;
+    cursor: pointer;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div:hover .introduction-title a {
+    color: white;
+    cursor: pointer;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div .introduction-image img {
     max-width: 40%;
     margin-bottom: 10px;
     margin: 0 auto;
     text-align: center;
   }
-  .menu-name-menu-private-zone ul.menu .slick-track .introduction-title a {
+  .menu-name-menu-private-zone ul.menu .slick-track > li > div .introduction-title a {
     color: white;
     font-style: italic;
     text-decoration: none;
     font-size: 1em;
   }
-  .menu-name-menu-private-zone ul.menu .slick-track ul.submenu-items {
+  .menu-name-menu-private-zone ul.menu .slick-track > li ul.submenu-items {
     list-style: none;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li ul.submenu-items a {
+    background-color: white;
+    vertical-align: middle;
+    display: table-cell;
+    height: 40px;
+    border-radius: 5px;
+    font-style: italic;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 0.9em;
+    line-height: 16px;
+    text-decoration: none;
+    opacity: 0.8;
+  }
+  .menu-name-menu-private-zone ul.menu .slick-track > li ul.submenu-items a:hover {
+    opacity: 1;
+    color: #786586;
   }
   .node-form input,
   .node-form select,
