--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4100,41 +4100,65 @@ div[id ^= "mini-panel-partner_in_"], {
 		display: table;
 		text-align: center;
 		> li{
-			width: 150px;
-			height: 150px;
 			text-align: center;
-			border-radius: 50%;
-			padding: 5px;
-    		padding-top: 20px;
-    		cursor: pointer;
     		display: table-cell;
-    		&:hover{
-    			background-color: rgba(255, 255, 255, 0.7);
-    			img{
-    				-webkit-filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
-    				filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
-    			}
-    			.introduction-title{
-	    			a{
-	    				color: @color-primary-dark;
+    		> div{
+    			width: 140px;
+				height: 140px;
+				border-radius: 50%;
+				padding: 0px;
+    			padding-top: 10px;
+    			margin-bottom: 12px;
+	    		&:hover{
+	    			background-color: rgba(255, 255, 255, 0.7);
+	    			img{
+	    				-webkit-filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
+	    				filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(231deg) saturate(200%) contrast(0.8);
 	    			}
-    			}
-    		}
-			.introduction-image{
-				img{
-					max-width: 40%;
-					margin-bottom: 10px;
+	    			.introduction-title{
+		    			a{
+		    				color: @color-primary-dark;
+		    			}
+	    			}
+	    		}
+				.introduction-image{
+					img{
+						max-width: 40%;
+						cursor: pointer;
+					}
 				}
-			}
-			.introduction-title{
-				a{
-					color: white;
-					font-style: italic;
-					text-decoration: none;
+				.introduction-title{
+					a{
+						color: white;
+						font-style: italic;
+						text-decoration: none;
+						cursor: pointer;
+					}
 				}
 			}
 			ul.submenu-items{
 				list-style: none;
+				margin-right: 5px;
+				margin-left: 5px;
+				a{
+					background-color: white;
+				    vertical-align: middle;
+				    display: table-cell;
+				    height: 40px;
+				    width: 140px;
+				    border-radius: 5px;
+				    font-style: italic;
+				    padding-top: 2px;
+				    padding-bottom: 2px;
+				    font-size: 0.9em;
+				    line-height: 16px;
+				    text-decoration: none;
+				    opacity: 0.8;
+				    &:hover{
+				    	opacity: 1;
+				    	color: @color-text-purple-darker;
+				    }
+				}
 			}
 		}
 	}
