--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1767,51 +1767,75 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 ************************/
 //menu
 .menu-name-menu-private-zone{
-	background-color: @color-primary-dark;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    width: 100%;
-    overflow: hidden;
     position: relative;
+    padding-left: 43px;
 	ul.menu{
-		display: inherit;
-		text-align: center;
-		padding-left: 0px;
-		padding-right: 0px;
-		width: 100%;
+		width: 600px;
 		position: initial !important;
 		.slick-track{
 			li.active-trail{
 				background-color: rgba(255, 255, 255, 0.3);
 			}
 			> li{
-				width: 100px !important;
-				height: 100px;
-				text-align: center;
-				border-radius: 50%;
-				padding: 5px;
-	    		padding-top: 5px;
-	    		cursor: pointer;
-	    		display: table-cell;
-    		}
-    		.introduction-image{
-				img{
-					max-width: 40%;
-					margin-bottom: 10px;
-					margin: 0 auto;
-					text-align: center;
+				> div{
+					width: 93% !important;
+					height: 100px;
+					border-radius: 50%;
+					padding: 0px;
+		    		padding-top: 5px;
+		    		margin-bottom: 20px;
+		    		&:hover{
+		    			background-color: inherit;
+		    			img{
+		    				-webkit-filter: inherit;
+		    				filter: inherit;
+		    				cursor: pointer;
+		    			}
+		    			.introduction-title{
+			    			a{
+			    				color: white;
+			    				cursor: pointer;
+			    			}
+		    			}
+		    		}
+		    		.introduction-image{
+						img{
+							max-width: 40%;
+							margin-bottom: 10px;
+							margin: 0 auto;
+							text-align: center;
+						}
+					}
+					.introduction-title{
+						a{
+							color: white;
+							font-style: italic;
+							text-decoration: none;
+							font-size: 1em;
+						}
+					}
 				}
-			}
-			.introduction-title{
-				a{
-					color: white;
-					font-style: italic;
-					text-decoration: none;
-					font-size: 1em;
+				ul.submenu-items{
+					list-style: none;
+					a{
+						background-color: white;
+					    vertical-align: middle;
+					    display: table-cell;
+					    height: 40px;
+					    border-radius: 5px;
+					    font-style: italic;
+					    padding-top: 2px;
+					    padding-bottom: 2px;
+					    font-size: 0.9em;
+					    line-height: 16px;
+					    text-decoration: none;
+					    opacity: 0.8;
+					    &:hover{
+					    	opacity: 1;
+					    	color: @color-text-purple-darker;
+					    }
+					}
 				}
-			}
-			ul.submenu-items{
-				list-style: none;
 			}
     	}
 	}
