update class for collaboration panel

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4578,7 +4578,7 @@ div[id ^= "mini-panel-partner_in_"], {
 }
 
 //collaboration page
-.page-collaboration-area{
+.page-node-collaboration-area{
 	.page-promotional-materials-search{
 		.panel-page-introduction-text{
 			h2{
